--- a/index.html
+++ b/index.html
@@ -75,9 +75,13 @@
       <div class="col-4 text-center">
         <h3>SPACE SHOP</h3>
         <h5>REPAIR HULL:</h5>
-        <h5>BUY ENTERPRISE:</h5>
-        <h5>BUY DEFIANT:</h5>
-        <h5>BUY DELTA FLYER:</h5>
+        <h5>HAIL ENTERPRISE: <button class="btn btn success text-light" onclick="addPlayer('enterprise')">
+            Reinforce</button>
+        </h5>
+        <h5>HAIL DEFIANT: <button class="btn btn success text-light" onclick="addPlayer('defiant')">
+            Reinforce</button></h5>
+        <h5>HAIL Runabout: <button class="btn btn success text-light" onclick="addPlayer('runabout')">
+            ReinforcE</button></h5>
       </div>
       <!-- SECTION Reset -->
       <div class="col-2 d-flex align-items-center justify-content-center">
